--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		
 		<!-- Add your site or application content here -->
-		<p>Hello world! This is HTML5 Boilerplate.</p>
+		<p>Hello world! This is BrainPower Mobile. Maybe. You never know.</p>
 		
 		<script src="js/vendor/jquery-1.9.1.min.js"></script>
 		<script src="js/plugins.js"></script>
